objects/copado__Environment__c.object
<CustomObject>
    <fields>
        <fullName>copado__Minimum_Apex_Test_Coverage__c</fullName>
        <defaultValue>0.75</defaultValue>
        <inlineHelpText>Set the Minimum Apex Test Coverage here which will be used for Apex Test Results on the Org Credential detail page.</inlineHelpText>
        <label>Minimum Apex Test Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Org_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Org ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Run_all_tests__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, &quot;Run all tests&quot; will be enforced when deploying to this environment.</inlineHelpText>
        <label>Run all tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Production/Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Type__c</columns>
        <columns>copado__Minimum_Apex_Test_Coverage__c</columns>
        <columns>copado__Org_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>